# drug-lit-contradictory-claims

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.rst  blah.txt  compile_results.py  project.idx  setup.cfg  setup.py  submit_train_many_biobert.sh  tox.ini
.history/: setup_20200715020243.cfg  setup_20200715024208.cfg  setup_20200716031638.cfg  setup_20200716034512.cfg  setup_20200716034550.cfg  tox_20200715020243.ini  tox_20200716034915.ini
.history/src/contradictory_claims/: __init___20200716034240.py
.history/tests/extract_claims/: __init___20200722021239.py  contants_20200722020839.py  contants_20200722021144.py  contants_20200722023851.py  contants_20200722023907.py  contants_20200722023912.py  contants_20200722033913.py  test_extract_claims_20200722021121.py  test_extract_claims_20200722023344.py  test_utils_20200722021400.py  test_utils_20200722021540.py  test_utils_20200722021547.py  test_utils_20200722021616.py  test_utils_20200722021642.py
bluebert_model_init/: bert_model.ckpt.index
contradictory-claims/: .bumpversion.cfg  .readthedocs.yml  .travis.yml  README.rst  tox.ini
contradictory-claims/docs/source/: cli.rst  conf.py  index.rst  train_model.rst
contradictory-claims/src/contradictory_claims/: cli.py
contradictory-claims/tests/data/: __init__.py  constants.py
docs/: project.idx
docs/source/: dataloader.rst  evaluate_model.rst  extract_claims.rst  index.rst  make_dataset.rst  project.idx  sbert_models.rst
notebooks/: Analyzing_Roam_Data.ipynb  Basic Data Exploration.ipynb  BlueBert_Refactor.ipynb  CORD_Citation_Network_Analysis.ipynb  Contra_Claims_Analysis.ipynb  Contra_Claims_Analysis_Roam_Data.ipynb  Contradictory_claims_Roam_scaling_round_V2.xlsx  Data Preprocessing.ipynb  Experimental_New_Functionality.ipynb  Roam_annotations_trainvaltest_split.xlsx  making_roam_trainvaltest.ipynb  mancon_benchmark.ipynb  project.idx  roam_covid_contradict.ipynb
src/: project.idx
src/contradictory_claims/: __init__.py  __main__.py  cli.py  project.idx
src/contradictory_claims/claims/: __init__.py  dataset_reader.py  extract_claims.py  models.py  predictors.py  utils.py
src/contradictory_claims/data/: __init__.py  make_dataset.py  prepare_claims_for_roam.py  preprocess_cord.py  process_claims.py  project.idx
src/contradictory_claims/extract_claims/: __init__.py  extract_claims.py  predictors.py  utils.py
tests/: __init__.py  project.idx
tests/data/: constants.py  project.idx  test_make_dataset.py  test_preprocess_cord.py  test_process_claims.py
tests/extract_claims/: __init__.py  constants.py  test_extract_claims.py  test_utils.py
tests/models/: __init__.py  project.idx  test_evaluate_model.py  test_sbert_model.py  test_train_model.py
(+82 files in other folders)
