[metadata]
name = contradictory_claims
version = 0.0.1-dev
description = A package for finding contradictory claims related to COVID-19 drug treatments in the CORD-19 literature
long_description = file: README.rst

url = http://INSERT_GITHUB_URL_HERE
# download_url = https://github.com/cthoyt-teaches-reproducibility/iter-together/releases
# project_urls =
    # Bug Tracker = https://github.com/cthoyt-teaches-reproducibility/iter-together/issues
    # Source Code = https://github.com/cthoyt-teaches-reproducibility/iter-together

author = Daniel Sosa and Malavika Suresh
author_email = dnsosa@stanford.edu
maintainer = Daniel Sosa
maintainer_email = dnsosa@stanford.edu

license = MIT
license_file = LICENSE

#  Google "Python Trove Classifiers"
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
keywords =
    deep learning
    NLP
    misinformation
    COVID-19
    drugs

[options]
install_requires =
    click
    click-plugins
    # en_core_sci_lg
    h5py < 3.0.0
    keras
    matplotlib
    networkx
    nltk
    numba
    numpy
    pandas
    sphinx
    scikit-learn
	scispacy
    sentence_transformers
    tensorflow
    torch
    transformers==3.5.1
    overrides
    spacy
    nltk
    allennlp==1.2.2
    # en_core_web_sm
    wandb==0.9.4
    wget

dependency_links =
    "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz"
    "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.2.4/en_core_sci_lg-0.2.4.tar.gz"
    "git+https://github.com/ncbi-nlp/bluebert.git"

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where's the code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    numpy
    pandas
    sklearn
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx-click
    tensorflow
testing =
    pytest

[options.entry_points]
console_scripts =
    contradictory-claims = contradictory_claims.cli:main

# Doc8 Config
[doc8]
max-line-length = 120

# Coverage config
[coverage:run]
branch = True
source = contradictory_claims
omit =
    src/contradictory_claims/__main__.py
    src/contradictory_claims/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/contradictory_claims
    .tox/*/lib/python*/site-packages/contradictory_claims

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
